# config/packages/nelmio_api_doc.yaml
@@ -219,8 +219,8 @@ nelmio_api_doc:
           schema:
             type: integer
       responses:
-        badParameters:
-          description: "Bad Url Parameter or required fields missing/invalid"
+        BadParameters:
+          description: "Invalid Url parameters or required fields missing/invalid"
         readProduct:
           description: "Details of the product"
           content:
@@ -245,6 +245,12 @@ nelmio_api_doc:
             application/json:
               schema:
                 ref: "#/components/schemas/Product"
+        readBrand:
+          description: "Details of the Brand"
+          content:
+            application/json:
+              schema:
+                ref: "#/components/schemas/Brand"
         listUsers:
           description: "List of users"
           content:
@@ -369,6 +375,8 @@ nelmio_api_doc:
               ref: "#/components/responses/Token"
             '401':
               ref: "#/components/responses/InvalidCredentials"
+            '400':
+              ref: "#/components/responses/BadParameters"
 
   areas: # to filter documented areas
     path_patterns:
